--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/foundation.css">
-        <link rel="stylesheet" href="styles/mystyles.css">
+        <link rel="stylesheet" href="styles/custom_styles.css">
         <link href='http://fonts.googleapis.com/css?family=Voces' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -153,7 +153,7 @@
         <p class="techs-used">Primary technologies: Ubuntu Linux, Puppet, Active Directory</p>
         </div>
       </div>
-      <p id="abridged" class="text-center">This is just the abridged version. Check out the whole thing on <a href="//www.linkedin.com/in/jmagnare">LinkedIn</a></p>
+      <p id="abridged" class="text-center">This is just the abridged version. Check out the whole thing on <a href="//www.linkedin.com/in/jmagnare">LinkedIn</a>.</p>
     </div>
     <div class="content-container row" id="where-container">
       <div class="large-12 columns text-center">
