--- a/app/index.html
+++ b/app/index.html
@@ -172,41 +172,32 @@
     <!-- TODO (jmagnarelli): figure out a better way to do this small-home stuff so it works for people w/o JS -->
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="scripts/jquery.js"></script>
     <script>
 
-        var hash = window.location.hash
-        if (hash) {
-          $('#homepage-display').addClass('small-home')
-        } else {
-          $('#homepage-display').removeClass('small-home')
-        }  
-
     </script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-49974915-1', 'magnarelli.org');
-      ga('send', 'pageview');
-
-    </script>
     <script type="text/javascript">
+
       $(document).ready(function() {
+        // Do the cool name thing
         $('body').addClass('page-loaded');
 
+        // Go to the appropriate location (no :target stuff to avoid 'jumps')
         if (location.hash) {
+          $('#homepage-display').addClass('small-home');
           $(location.hash + '-container').addClass('current-content');
+        } else {
+          $('#homepage-display').removeClass('small-home');
         }
+
+        // Let's slip into something a little more comfortable...
         if (location.host.indexOf('magnarelli.sexy') > -1) {
           $('body').addClass('sexy-background')
           $('body').removeClass('background')
         }
       })
 
+      // Navigation
       $('#name-header').click(function() { 
                             $('#homepage-display').removeClass('small-home');
                             $('.content-container').removeClass('current-content');
@@ -217,6 +208,16 @@
                                       $('.content-container').removeClass('current-content');
                                       $('#' + target).addClass('current-content');
                                     });
+    </script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-49974915-1', 'magnarelli.org');
+      ga('send', 'pageview');
+
     </script>
 </body>
 </html>
