--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,10 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-        <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+        <link href="/styles/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+        <link href="/styles/print.css" media="print" rel="stylesheet" type="text/css" />
         <!--[if IE]>
-            <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+            <link href="/styles/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
         <![endif]-->
 
 
