Add screencaps for projects, begin project listings based off of career listings page

--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,51 @@
       </div>
     </div>
     <div class="content-container row" id="what-container">
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="screencap" src="../misc/mamoru.png" alt="The cult of the sprocket">
+        <div class="row"><h7 class="job-title">Co-op Software Engineer</h7></div>
+        <div class="row"><h7 class="job-title">Jan - Jul 2014</h7></div>
+        </div>
+        <div class="large-8 columns">
+        <p class="job-descr">Here I mostly work on the HubSpot COS, an integrated website, blog, and landing page system. </p>
+        <p class="techs-used">Primary technologies: Python, Django, Java, MySQL, Coffeescript, CSS</p>
+       </div>
+      </div>
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="screencap" src="../misc/tweetpd_small.png" alt="America's second biggest tax collector">
+        <div class="row"><h7 class="job-title">Co-op Software Engineer</h7></div>
+        <div class="row"><h7 class="job-title">Jan - Jul 2013</h7></div>
+        </div>
+        <div class="large-8 columns">
+        <p class="job-descr">My role here spanned engineering and customer research. On one team, I worked on a new version of the TurboTax product, implementing new features on the back and front end.
+        On the Healthcare team, I conducted interviews and focus groups to discover customer needs and insights, then rapidly iterated on our prototypes for the next customer sessions.</p>
+        <p class="techs-used">Primary technologies: Java, Javascript, Maven</p>
+         </div>
+      </div>
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="screencap" src="../misc/vulgar_tongue.png" alt="They've moved to Billerica since I worked there">
+        <div class="row"><h7 class="job-title">Co-op Software Engineer</h7></div>
+        <div class="row"><h7 class="job-title">Jan - Jul 2012</h7></div>
+        </div><div class="large-8 columns">
+        <p class="job-descr">Here I developed a stress-testing and diagnostic framework for the servers we manufactured. It integrated with the bootloader and exercised all components of the system.</p>
+        <p class="techs-used">Primary technologies: C++, C, Linux</p>
+        </div>
+      </div>
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="screencap" src="../misc/anagrams.png" alt="NORTH! EASTERN! NORTH! EASTERN!">
+        <div class="row"><h7 class="job-title">ResNet System Administrator</h7></div>
+        <div class="row"><h7 class="job-title">Jul 2012 - Present</h7></div>
+        </div>
+        <div class="large-8 columns">
+        <p class="job-descr">I maintain and develop the severs and other infrastructure at ResNet, a technical support office. I'm responsible for firewalls, data backup, DNS, print services, maintaining our Django applications, and more.
+        </p>
+        <p class="techs-used">Primary technologies: Ubuntu Linux, Puppet, Active Directory</p>
+        </div>
+      </div>
       <p id="abridged" class="text-center">This is just a summary. <a href="//www.github.com/jmagnarelli">GitHub</a> is the source of truth.</p>
     </div>
     <div class="content-container row" id="when-container">
