Add screencap of site, along with description

--- a/app/index.html
+++ b/app/index.html
@@ -150,6 +150,18 @@
         <p class="techs-used">Primary technologies: Ubuntu Linux, Puppet, Active Directory</p>
         </div>
       </div>
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="screencap" src="../misc/magnarelli_org1.png" alt="NORTH! EASTERN! NORTH! EASTERN!">
+        <div class="row"><h7 class="job-title">ResNet System Administrator</h7></div>
+        <div class="row"><h7 class="job-title">Jul 2012 - Present</h7></div>
+        </div>
+        <div class="large-8 columns">
+        <p class="job-descr">I maintain and develop the severs and other infrastructure at ResNet, a technical support office. I'm responsible for firewalls, data backup, DNS, print services, maintaining our Django applications, and more.
+        </p>
+        <p class="techs-used">Primary technologies: Ubuntu Linux, Puppet, Active Directory</p>
+        </div>
+      </div>
       <p id="abridged" class="text-center">This is just a summary. <a href="//www.github.com/jmagnarelli">GitHub</a> is the source of truth.</p>
     </div>
     <div class="content-container row" id="when-container">
