Add links to projects

--- a/app/index.html
+++ b/app/index.html
@@ -107,9 +107,8 @@
     <div class="content-container row" id="what-container">
       <div class="row info-listing">
         <div class="large-4 columns">
-        <img class="screencap" src="../misc/mamoru.png" alt="The cult of the sprocket">
-        <div class="row"><h7 class="job-title">Co-op Software Engineer</h7></div>
-        <div class="row"><h7 class="job-title">Jan - Jul 2014</h7></div>
+        <a href="../misc/mamoru.png"><img class="screencap" src="../misc/mamoru.png" alt="The cult of the sprocket"></a>
+        <div class="row"><h7 class="job-title"><a href="http://www.mamoru.co">Live</a> | <a href="http://www.github.com/jmagnarelli/Mamoru_Backend">GitHub</a></h7></div>
         </div>
         <div class="large-8 columns">
         <p class="job-descr">Here I mostly work on the HubSpot COS, an integrated website, blog, and landing page system. </p>
@@ -118,9 +117,8 @@
       </div>
       <div class="row info-listing">
         <div class="large-4 columns">
-        <img class="screencap" src="../misc/tweetpd_small.png" alt="America's second biggest tax collector">
-        <div class="row"><h7 class="job-title">Co-op Software Engineer</h7></div>
-        <div class="row"><h7 class="job-title">Jan - Jul 2013</h7></div>
+        <a href="../misc/tweetpd_big.png"><img class="screencap" src="../misc/tweetpd_small.png" alt="America's second biggest tax collector"></a>
+        <div class="row"><h7 class="job-title"><a href="http://www.tweetpd.com">Live</a> | <a href="http://www.github.com/jmagnarelli/watchyourback">GitHub</a></h7></div>
         </div>
         <div class="large-8 columns">
         <p class="job-descr">My role here spanned engineering and customer research. On one team, I worked on a new version of the TurboTax product, implementing new features on the back and front end.
@@ -130,9 +128,8 @@
       </div>
       <div class="row info-listing">
         <div class="large-4 columns">
-        <img class="screencap" src="../misc/vulgar_tongue.png" alt="They've moved to Billerica since I worked there">
-        <div class="row"><h7 class="job-title">Co-op Software Engineer</h7></div>
-        <div class="row"><h7 class="job-title">Jan - Jul 2012</h7></div>
+        <a href="../misc/vulgar_tongue.png"><img class="screencap" src="../misc/vulgar_tongue.png" alt="They've moved to Billerica since I worked there"></a>
+        <div class="row"><h7 class="job-title"><a href="http://www.twitter.com/daily1811slang">Live</a> | <a href="http://www.github.com/jmagnarelli/vulgar_tongue">GitHub</a></h7></div>
         </div><div class="large-8 columns">
         <p class="job-descr">Here I developed a stress-testing and diagnostic framework for the servers we manufactured. It integrated with the bootloader and exercised all components of the system.</p>
         <p class="techs-used">Primary technologies: C++, C, Linux</p>
@@ -140,9 +137,8 @@
       </div>
       <div class="row info-listing">
         <div class="large-4 columns">
-        <img class="screencap" src="../misc/anagrams.png" alt="NORTH! EASTERN! NORTH! EASTERN!">
-        <div class="row"><h7 class="job-title">ResNet System Administrator</h7></div>
-        <div class="row"><h7 class="job-title">Jul 2012 - Present</h7></div>
+        <a href="../misc/anagrams.png"><img class="screencap" src="../misc/anagrams.png" alt="NORTH! EASTERN! NORTH! EASTERN!"></a>
+        <div class="row"><h7 class="job-title"><a href="http://www.github.com/jmagnarelli/anagram-analyzer">GitHub</a></h7></div>
         </div>
         <div class="large-8 columns">
         <p class="job-descr">I maintain and develop the severs and other infrastructure at ResNet, a technical support office. I'm responsible for firewalls, data backup, DNS, print services, maintaining our Django applications, and more.
@@ -152,9 +148,8 @@
       </div>
       <div class="row info-listing">
         <div class="large-4 columns">
-        <img class="screencap" src="../misc/magnarelli_org1.png" alt="NORTH! EASTERN! NORTH! EASTERN!">
-        <div class="row"><h7 class="job-title">ResNet System Administrator</h7></div>
-        <div class="row"><h7 class="job-title">Jul 2012 - Present</h7></div>
+        <a href="../misc/magnarelli_org1.png"><img class="screencap" src="../misc/magnarelli_org1.png" alt="NORTH! EASTERN! NORTH! EASTERN!"></a>
+        <div class="row"><h7 class="job-title"><a href="http://www.magnarelli.org">Live</a> | <a href="http://www.github.com/jmagnarelli/magnarelli.org">GitHub</a></h7></div>
         </div>
         <div class="large-8 columns">
         <p class="job-descr">I maintain and develop the severs and other infrastructure at ResNet, a technical support office. I'm responsible for firewalls, data backup, DNS, print services, maintaining our Django applications, and more.
