--- a/app/index.html
+++ b/app/index.html
@@ -110,7 +110,8 @@
         <a href="../misc/mamoru.png"><img class="screencap" src="../misc/mamoru.png" alt="The cult of the sprocket"></a>
         <div class="row"><h7 class="job-title"><a href="http://www.mamoru.co">Live</a> | <a href="http://www.github.com/jmagnarelli/Mamoru_Backend">GitHub</a></h7></div>
         </div>
-        <div class="large-8 columns">
+        <div class="large-8 columns project-descr">
+        <h4>Mamoru</h4>
         <p class="job-descr">Here I mostly work on the HubSpot COS, an integrated website, blog, and landing page system. </p>
         <p class="techs-used">Primary technologies: Python, Django, Java, MySQL, Coffeescript, CSS</p>
        </div>
@@ -120,7 +121,8 @@
         <a href="../misc/tweetpd_big.png"><img class="screencap" src="../misc/tweetpd_small.png" alt="America's second biggest tax collector"></a>
         <div class="row"><h7 class="job-title"><a href="http://www.tweetpd.com">Live</a> | <a href="http://www.github.com/jmagnarelli/watchyourback">GitHub</a></h7></div>
         </div>
-        <div class="large-8 columns">
+        <div class="large-8 columns project-descr">
+        <h4>TweetPD</h4>
         <p class="job-descr">My role here spanned engineering and customer research. On one team, I worked on a new version of the TurboTax product, implementing new features on the back and front end.
         On the Healthcare team, I conducted interviews and focus groups to discover customer needs and insights, then rapidly iterated on our prototypes for the next customer sessions.</p>
         <p class="techs-used">Primary technologies: Java, Javascript, Maven</p>
@@ -130,7 +132,8 @@
         <div class="large-4 columns">
         <a href="../misc/vulgar_tongue.png"><img class="screencap" src="../misc/vulgar_tongue.png" alt="They've moved to Billerica since I worked there"></a>
         <div class="row"><h7 class="job-title"><a href="http://www.twitter.com/daily1811slang">Live</a> | <a href="http://www.github.com/jmagnarelli/vulgar_tongue">GitHub</a></h7></div>
-        </div><div class="large-8 columns">
+        </div><div class="large-8 columns project-descr">
+        <h4>Vulgar Tongue</h4>
         <p class="job-descr">Here I developed a stress-testing and diagnostic framework for the servers we manufactured. It integrated with the bootloader and exercised all components of the system.</p>
         <p class="techs-used">Primary technologies: C++, C, Linux</p>
         </div>
@@ -140,7 +143,8 @@
         <a href="../misc/anagrams.png"><img class="screencap" src="../misc/anagrams.png" alt="NORTH! EASTERN! NORTH! EASTERN!"></a>
         <div class="row"><h7 class="job-title"><a href="http://www.github.com/jmagnarelli/anagram-analyzer">GitHub</a></h7></div>
         </div>
-        <div class="large-8 columns">
+        <div class="large-8 columns project-descr">
+        <h4>Anagram Analyzer</h4>
         <p class="job-descr">I maintain and develop the severs and other infrastructure at ResNet, a technical support office. I'm responsible for firewalls, data backup, DNS, print services, maintaining our Django applications, and more.
         </p>
         <p class="techs-used">Primary technologies: Ubuntu Linux, Puppet, Active Directory</p>
@@ -151,7 +155,8 @@
         <a href="../misc/magnarelli_org1.png"><img class="screencap" src="../misc/magnarelli_org1.png" alt="NORTH! EASTERN! NORTH! EASTERN!"></a>
         <div class="row"><h7 class="job-title"><a href="http://www.magnarelli.org">Live</a> | <a href="http://www.github.com/jmagnarelli/magnarelli.org">GitHub</a></h7></div>
         </div>
-        <div class="large-8 columns">
+        <div class="large-8 columns project-descr">
+        <h4>magnarelli.org</h4>
         <p class="job-descr">I maintain and develop the severs and other infrastructure at ResNet, a technical support office. I'm responsible for firewalls, data backup, DNS, print services, maintaining our Django applications, and more.
         </p>
         <p class="techs-used">Primary technologies: Ubuntu Linux, Puppet, Active Directory</p>
