First pass at text descriptions for personal projects

--- a/app/index.html
+++ b/app/index.html
@@ -107,8 +107,9 @@
         </div>
         <div class="large-8 columns project-descr">
         <h4>Mamoru</h4>
-        <p class="job-descr">Here I mostly work on the HubSpot COS, an integrated website, blog, and landing page system. </p>
-        <p class="techs-used">Primary technologies: node.js, firebase, android sdk</p>
+        <p class="job-descr">Mamoru means "to protect" in Japanese. Use Mamoru to set a timer. If you don't check back in before the time is up, Mamoru lets your contacts know something might be wrong.
+        Mamoru won first place in the Health and Wellness category at <a href="http://www.hackduke.com">Hack Duke 2014!</a> It also took home the Twilio API prize that day.</p>
+        <p class="techs-used">Primary technologies: node.js, firebase, android sdk, twilio api</p>
        </div>
       </div>
       <div class="row info-listing">
@@ -118,8 +119,7 @@
         </div>
         <div class="large-8 columns project-descr">
         <h4>TweetPD</h4>
-        <p class="job-descr">My role here spanned engineering and customer research. On one team, I worked on a new version of the TurboTax product, implementing new features on the back and front end.
-        On the Healthcare team, I conducted interviews and focus groups to discover customer needs and insights, then rapidly iterated on our prototypes for the next customer sessions.</p>
+        <p class="job-descr">TweetPD is an alert service for local emergencies. It listens in on municipal fire, police, and 911 dispatch Twitter accounts, and can let you know if something's wrong in your area. TweetPD currently supports alerts via SMS and US Mail. That's right! Postal mail. If there's a fire down the street from you, we can immediately dispatch a postard to your residence, and in just a few short business days, you'll know all about the emergency. The future is now! Note: this is in beta - don't rely on it.</p>
         <p class="techs-used">Primary technologies: python, flask, bootstrap, twilio api, lob api, twitter api</p>
          </div>
       </div>
@@ -129,7 +129,8 @@
         <div class="row"><h7 class="job-title"><a href="http://www.twitter.com/daily1811slang">Live</a> | <a href="http://www.github.com/jmagnarelli/vulgar_tongue">GitHub</a></h7></div>
         </div><div class="large-8 columns project-descr">
         <h4>Vulgar Tongue</h4>
-        <p class="job-descr">Here I developed a stress-testing and diagnostic framework for the servers we manufactured. It integrated with the bootloader and exercised all components of the system.</p>
+        <p class="job-descr">A Twitter bot that tweets a word of the day from Francis Grose's 1811 Dictionary of the Vulgar Tongue. 
+        I found the book on Project Gutenberg, and I just couldn't resist.</p>
         <p class="techs-used">Primary technologies: python, sqlite, twitter api</p>
         </div>
       </div>
@@ -140,7 +141,7 @@
         </div>
         <div class="large-8 columns project-descr">
         <h4>Anagram Analyzer</h4>
-        <p class="job-descr">I maintain and develop the severs and other infrastructure at ResNet, a technical support office. I'm responsible for firewalls, data backup, DNS, print services, maintaining our Django applications, and more.
+        <p class="job-descr">This is a solution to the classic programming question  "Given a set of words, output the number of words in that set that have at least one anagram among the other words in the set." It was written to be stand-alone library that could be run on arbitrary word lists - it is well-documented and unit-tested, and runs on python 3.3 and 2.7. The Ridiculously Huge English Word List is included for testing, along with a few other word lists. 
         </p>
         <p class="techs-used">Primary technologies: python</p>
         </div>
@@ -152,9 +153,9 @@
         </div>
         <div class="large-8 columns project-descr">
         <h4>magnarelli.org</h4>
-        <p class="job-descr">I maintain and develop the severs and other infrastructure at ResNet, a technical support office. I'm responsible for firewalls, data backup, DNS, print services, maintaining our Django applications, and more.
+        <p class="job-descr">This is my personal site (you're on it right now!) I created it largely for personal satisfaction, but it's also a showcase of some of my professional and personal work. If you have any feedback, please let me know!
         </p>
-        <p class="techs-used">Primary technologies: sass/css, html, node.js</p>
+        <p class="techs-used">Primary technologies: sass/css, html, node.js, zurb foundation</p>
         </div>
       </div>
       <p id="abridged" class="text-center">This is just a summary. <a href="//www.github.com/jmagnarelli">GitHub</a> is the source of truth.</p>
