Remove pointless link to own homepage that may be messing with SEO

--- a/app/index.html
+++ b/app/index.html
@@ -149,7 +149,7 @@
       <div class="row info-listing">
         <div class="large-4 columns">
         <a href="../misc/magnarelli_org1.png"><img class="screencap" src="../misc/magnarelli_org1.png" alt="My personal site. You are on it right now."></a>
-        <div class="row"><h7 class="job-title"><a href="http://www.magnarelli.org">Live</a> | <a href="http://www.github.com/jmagnarelli/magnarelli.org">GitHub</a></h7></div>
+        <div class="row"><h7 class="job-title"><a href="javascript:;">Live</a> | <a href="http://www.github.com/jmagnarelli/magnarelli.org">GitHub</a></h7></div>
         </div>
         <div class="large-8 columns project-descr">
         <h4>magnarelli.org</h4>
