Tweak project description

--- a/app/index.html
+++ b/app/index.html
@@ -152,8 +152,8 @@
         <div class="row"><h7 class="job-title"><a href="javascript:;">Live</a> | <a href="http://www.github.com/jmagnarelli/magnarelli.org">GitHub</a></h7></div>
         </div>
         <div class="large-8 columns project-descr">
-        <h4>magnarelli.org</h4>
-        <p class="job-descr">This is my personal site (you're on it right now!) I created it largely for personal satisfaction, but it's also a showcase of some of my professional and personal work. If you have any feedback, please let me know!
+        <h4>This Site</h4>
+        <p class="job-descr">Largely for personal satisfaction, this is also a showcase of some of my professional and personal work. If you have any feedback, please let me know!
         </p>
         <p class="techs-used">Primary technologies: sass/css, html, node.js, zurb foundation</p>
         </div>
