Fix text spacing, add list of collaborators

--- a/app/index.html
+++ b/app/index.html
@@ -110,6 +110,7 @@
         <p class="job-descr">Mamoru means "to protect" in Japanese. Use Mamoru to set a timer. If you don't check back in before the time is up, Mamoru lets your contacts know something might be wrong.
         Mamoru won first place in the Health and Wellness category at <a href="http://www.hackduke.com">Hack Duke 2014!</a> It also took home the Twilio API prize that day.</p>
         <p class="techs-used">Primary technologies: node.js, firebase, android sdk, twilio api</p>
+        <p class="techs-used">Collaborators: <a href="https://www.linkedin.com/profile/view?id=12294169">Bobo Bose-Kolanu</a>, <a href="http://zfo.gg">Zach Fogg</a>, <a href="https://www.linkedin.com/profile/view?id=20120189">Siddhartha Tondapu</a></p>
        </div>
       </div>
       <div class="row info-listing">
@@ -121,6 +122,7 @@
         <h4>TweetPD</h4>
         <p class="job-descr">TweetPD is an alert service for local emergencies. It listens in on municipal fire, police, and 911 dispatch Twitter accounts, and can let you know if something's wrong in your area. TweetPD currently supports alerts via SMS and US Mail. That's right! Postal mail. If there's a fire down the street from you, we can immediately dispatch a postard to your residence, and in just a few short business days, you'll know all about the emergency. The future is now! Note: this is in beta - don't rely on it.</p>
         <p class="techs-used">Primary technologies: python, flask, bootstrap, twilio api, lob api, twitter api</p>
+        <p class="techs-used">Collaborators: <a href="//aliceyoung.io">Alice Young</a>, <a href="https://www.linkedin.com/profile/view?id=248467780">Arya Boudaie</a>, <a href="https://www.linkedin.com/profile/view?id=239396890">Luka Milekic</a></p>
          </div>
       </div>
       <div class="row info-listing">
