Add IVR number, change site technologies

--- a/site/index.html
+++ b/site/index.html
@@ -157,7 +157,7 @@
         <h4>magnarelli.org</h4>
         <p class="job-descr">Largely for personal satisfaction, but it's also a showcase of some of my professional and personal work. If you have any feedback, please let me know!
         </p>
-        <p class="techs-used">Primary technologies: sass/css, html, node.js, zurb foundation</p>
+        <p class="techs-used">Primary technologies: sass/css, html, zurb foundation</p>
         </div>
       </div>
       <p id="abridged" class="text-center">This is just a summary. <a href="//www.github.com/jmagnarelli">GitHub</a> is the source of truth.</p>
@@ -216,6 +216,9 @@
         <a href="//www.linkedin.com/in/jmagnare"><i class="fa fa-linkedin-square"></i></a>
         <a href="mailto:jmagnare@gmail.com"><i class="fa fa-envelope"></i></a>
         <a href="//www.facebook.com/james.magnarelli"><i class="fa fa-facebook-square"></i></a>
+      </div>
+      <div class="large-12 columns text-center">
+        <p id="phone-num">978.96JAMES (52637)</p>
       </div>
     </div>
     <div class="content-container row" id="why-container">
